--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.19.4"
+    "knex": "^0.19.4",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2",
-    "sqlite3": "^4.1.0"
+    "nodemon": "^1.19.2"
   }
 }
